# StewartPlatform

./: .gitignore  README.md
platform_header/: CMakeLists.txt  main.cpp
platform_header/build-debug/: CMakeCache.txt  Makefile  TestPlatform  cmake_install.cmake
platform_header/build-debug/include/: Makefile  cmake_install.cmake
platform_header/include/: CMakeLists.txt  platform.cpp
platform_header/include/BasicLinearAlgebra/: Arduino.h  Printable.h
platform_header/include/BasicLinearAlgebra/test/: Arduino.h
run_platform/: platform.h  run_platform.ino
